--- a/style.css
+++ b/style.css
@@ -8,6 +8,23 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    @media(max-width : 500px) {
+        div.outer-box{
+            width: 200px;
+        }
+        div button{
+            width: 150px;
+        }
+        .satyendra-text img{
+            width: 50px ;
+            height: 50px;
+        }
+    }
+    @media (max-width : 200px) {
+        body{
+            width: 200px;
+        }
+    }
 }
 .btn{
     display: flex;
@@ -43,6 +60,10 @@ div button:hover{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.satyendra-text img{
+    width:10% ;
+    height:10%;
 }
 .second-btn{
     display: flex;
