--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     margin: 0;
     height: 100vh;
     font-family: "Gill Sans", sans-serif;
-    background-color: rgb(94, 77, 77);
+    background: -webkit-linear-gradient(225deg, rgb(132, 0, 255) 0%, rgb(230, 0, 255) 100%);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -39,19 +39,21 @@ div button{
     font-size: 15px;
     font-weight: bold;
     border-radius:5px;
-    background-color: rgb(109, 96, 96);
+    background: -webkit-linear-gradient(225deg, rgb(132, 0, 255) 0%, rgb(230, 0, 255) 100%);
+    /* background-color: rgb(109, 96, 96); */
     
 }
 .file-text{
     text-decoration: none;
 }
 div button:hover{
-    background-color: rgb(82, 71, 71);
+    /* background-color: rgb(82, 71, 71); */
+    background: -webkit-linear-gradient(225deg, rgb(230, 0, 255) 0%, rgb(132, 0, 255) 100%);
     font-weight: 800;
 }
 .outer-box{
     width: 40vw;
-    background-color: rgb(152, 135, 135);
+    background: -webkit-linear-gradient(225deg, rgb(230, 0, 255) 0%, rgb(132, 0, 255) 100%);
     padding: 2rem;
 }
 .satyendra-text{
